syntax = "proto3";

option go_package = "grpc_learn/helloword";

package helloword;

import "google/api/annotations.proto";

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

service HelloWord {
  rpc Say(HelloRequest) returns  (HelloReply) {
    option (google.api.http) = {
      get: "/v1/hello/say"
    };
  }
}